loan: Add a field to identify shared loan contracts  (#3640)
* First runnable version to add new tag for shared loan contracts

* 14576: Loan tag doesn't appear if contracts has no shared loan

* Add explication in changelog and add new translations

* Add co_loaners

* Add co-loaners show to UI

* Add feature description to CHANGELOGs

* Remove insured persons in contract from co-borrowers' list

* Simplify invisible condition

* Adjust translations in fr.po

* Sort co-borrowers' id and linked loan contracts' id

* UI changes

Co-authored-by: Stéphane Leibovitsch <56913865+sleibo-coopengo@users.noreply.github.com>

--- a/modules/loan/doc/fr/CHANGELOG
+++ b/modules/loan/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14576 Ajout d'un champ pour identifier des contrats avec des prêts en communs
 * OTH#00000 Retrait de la contrainte sur la présence de l'adresse de l'organisme prêteur sur la table des prêts
 * FEA#14566 Possibilité de calculer les primes à l'anniversaire du prêt (utile quand la date de déblocage des fonds du prêt n'est pas synchronisée avec la date d'effet du contrat)
 * OTH#0000 Clarification sur les traductions des prêts amortissables et du différé
