--- a/modules/loan/doc/en/CHANGELOG
+++ b/modules/loan/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14576 Add a field to identify shared loan contract
 * OTH#00000 Remove required constraint on lender address in loan table
 * FEA#14566 Allow to calculate premium at loan anniversary date
 * FEA#14008 Include future loans in outstanding amount
