--- a/modules/migrator_health/doc/fr/CHANGELOG
+++ b/modules/migrator_health/doc/fr/CHANGELOG
@@ -1,2 +1,4 @@
+* FEA#13910 Mise à jour du migrator des données de santé afin d'améliorer les performances de traitement
+
 Version 2.6 - 2019-10-11
 * FEA#0000 Module creation
