--- a/modules/process_cog/doc/fr/CHANGELOG
+++ b/modules/process_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Ajout d'une méthode d'une surchargeable pour la création des logs de processus
 * FEA#12761 Permet d'activer automatiquement un contrat une fois que la confirmation de signature requise est envoyée à Coog.
 
 Version 2.6 - 2019-10-11
