loan: Allow to set extra data in loans (#3661)
* Allow to set extra data in loans

* Add explications in CHANGELOG

* Add loan extra data tests

* Delete deepcopy in tests

--- a/modules/loan/doc/en/CHANGELOG
+++ b/modules/loan/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14707 Allow to set extra data and access to it by using APIs
 * FEA#14576 Add a field to identify shared loan contract
 * OTH#00000 Remove required constraint on lender address in loan table
 * FEA#14566 Allow to calculate premium at loan anniversary date
