--- a/modules/commission_insurance/doc/en/CHANGELOG
+++ b/modules/commission_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#13324 Allow to change (if the configuration allows it) the commission rate for a broker on a per-contract basis
 * BUG#14048 Unable to edit party with commission agents if the party is both insurer and broker
 * OTH#00000 Make contract field readonly on commissions
 * BUG#13653 Add tests for the two distribution networks APIS 
