distribution_channel: Do not check channels if no commercial product is provided (#3678)
Oth #00000

--- a/modules/distribution_channel/doc/en/CHANGELOG
+++ b/modules/distribution_channel/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* OTH#00000 Do not check channels if no commercial product is provided
+
 Version 2.6 - 2019-10-11
 * OTH#00000 Fix validation
 * OTH#00000 Add default web channel
