offered_eligibility: add option of blocking eligibility check to subscription API (#3699)
* offered_eligibility: add option of blocking eligibility check to subscription API

* add option to legacy quotation

--- a/modules/offered_eligibility/doc/en/CHANGELOG
+++ b/modules/offered_eligibility/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Add option of blocking eligibility check to subscription API
 * OTH#00000 Fix typo in option eligibility check method
 * OTH#00000 Update simulate API output schema
 * BUG#14012 Fix tests
