contract_insurance: Allow to add party extra data in APIs (#3681)
* First version to add party extra data in API

* Devs should be all in contract_insurance/api.py

* Allow to add party extra data

* Delete useless print

* Delete useless del in extra_data

* Update _party_convert function

* Delete unused line

* Correct code style and update unit tests

--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14708 Allow to add party extra data in APIs
 * OTH#0000 Properly filter document desc for covered element so that doc on commercial product work
 * FEA#13644 Calculate coverage amount and return to API
 * BUG#13758 Prevent crash when initializing some item descriptors
