--- a/modules/claim_process/doc/fr/CHANGELOG
+++ b/modules/claim_process/doc/fr/CHANGELOG
@@ -1,9 +1,10 @@
-BUG#13870 Initialisation de la date dans le contexte d'appel du moteur de règle lors du calcul des documents requis pour un sinistre
-BUG#13824 Permets de sélectionner uniquement les préjudices disponibles sur le processus
-BUG#13804 Correctif d'un bug dans le wizard de 'Déclaration/instruction de sinistre'
+* BUG#14949 Possibilité manquante de filtrer sur les descripteurs de préjudices pour les processus de type déclaration et réouverture de sinistre
+* BUG#13870 Initialisation de la date dans le contexte d'appel du moteur de règle lors du calcul des documents requis pour un sinistre
+* BUG#13824 Permets de sélectionner uniquement les préjudices disponibles sur le processus
+* BUG#13804 Correctif d'un bug dans le wizard de 'Déclaration/instruction de sinistre'
 
 Version 2.6 - 2019-10-11
-BUG#11416 Iteration sur le correctif incomplet
+* BUG#11416 Iteration sur le correctif incomplet
 
 Version 2.4 - 2019-04-12
 * BUG#11416 Correctif sur les processus proposés lorsqu'un sinistre est selectionné dans l'assistant de lancement de processus
