rule_engine: add a 'create date' function to rule engine (#3682)
Fix #14773

--- a/modules/rule_engine/doc/fr/CHANGELOG
+++ b/modules/rule_engine/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14773 Ajout d'une fonction "créer une date" dans le moteur de règle
 * BUG#13648 Correction de la liste de dates retournée par la fonction du moteur de règle dates_changement_table()
 
 Version 2.6 - 2019-10-11
