--- a/modules/rule_engine/doc/en/CHANGELOG
+++ b/modules/rule_engine/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14773 Add a "create date" function in rule engine
 * BUG#13648 Fix wrong list of dates returned by rule engine function dates_changement_table()
 
 Version 2.6 - 2019-10-11
