offered_insurance: Use creer_date in default ending rule (#3712)
Fix #00000

--- a/modules/offered_insurance/doc/en/CHANGELOG
+++ b/modules/offered_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Update default end date rule to use the new "creer_date" rule engine function
 * FEA#13170 APi describe product, move coverages description
 
 Version 2.6 - 2019-10-11
