--- a/modules/offered_insurance/doc/fr/CHANGELOG
+++ b/modules/offered_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#00000 Mise à jour de la règle de résiliation par défaut pour utiliser la fonction "creer_date"
 * FEA#13170 API Description de produits, changer l'emplacement des options de descripteurs de risques
 
 Version 2.6 - 2019-10-11
