claim_indemnification: Fix code to python 3 causing crash when applying underwriting reduction (#3721)
Fix #15006

--- a/modules/underwriting_claim_indemnification/doc/en/CHANGELOG
+++ b/modules/underwriting_claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15006 Fix code to python 3 causing crash when applying underwriting reduction
 * BUG#13631 Rewrite and test underwritings_at_date
 
 Version 2.6 - 2019-10-11
