claim_indemnification: Add total beneficiary share check method (#3716)
Fix #14996

--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14996 Add check method to be used in claim process whether total beneficiary share amounts to 100% for each delivered services
 * BUG#14995 Do not check share for cancel paid indemnifications
 * BUG#14904 Fix code to python 3 causing crash in indemnification calculation with beneficiary share
 * BUG#14216 Fix on revaluation which is applied the last day of the indemnification period: period wasn't splitted and the revaluation was'nt applied properly
