--- a/modules/account_payment_sepa_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12202 Automatic directory creation from the path given in parameter for the payment fail batch if needed
 * FEA#14301 Allow to configure sepa dump file in a dedicated folder per journal
 * BUG#13991 Add chain to override the reject payments treatment date with the working days configuration
 * BUG#13573 Degraded performances for SEPA message generation in case of amendment
