--- a/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
+++ b/modules/account_payment_sepa_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12202 Création automatique du dossier passé en paramètre de batch de refus de paiement si besoin
 * FEA#14301 Permettre de configurer le dossier de sortie des fichiers SEPA en fonction du journal
 * BUG#13991 Ajout d'une chaine pour définir la date de traitement des rejets en fonction des jours ouvrés
 * BUG#13573 Performance dégradée de la génération du message SEPA en cas d'amendement
