--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#12202 Création automatique de dossiers si besoin quand les chemins passés en paramètres des batchs n'existent pas
 * BUG#11810 Ajout d'une ligne dans le rapport de batch quand la génération des tâches d'un batch a échoué
 * FEA#14650 Ajout d'une ligne dans le rapport de batch quand un batch n'a généré aucune tâches
 * BUG#14548 Correctif des chaînes prest IJ dans la chaîne journalière.
