--- a/modules/party_birth_data/doc/en/CHANGELOG
+++ b/modules/party_birth_data/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#14894 Allow to add party birth data to party APIs
 * OTH#00000 Add missing depends on on_change_with_birth_country
 * BUG#14066 Allow initialization of birth_zip_and_city function field even if birth city is not defined
 * BUG#13466 Not reseting birth zip and city when the SSN is wrong or does not correspond to any INSEE code
