coog_core: Add never_modified_fields flag (#3723)
Fix #15014

--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#15014 Add never_modified_fields flag to avoid unnecessary client side reloading
 * BUG#12202 Automatic directory creation if needed when the paths given in batch parameters do not exist
 * BUG#11810 Add a line batch report when a batch job generation failed
 * FEA#14650 Add a line in batch report when a batch generated zero jobs
