--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13332 Clean up unused VAT codes in party identifier types
 * BUG#14927 Manage the case that death date could be birth date
 * OTH#0000 UI enhancements on party list view
 * FEA#12673 Manage death date on person record
