--- a/modules/party_cog/doc/fr/CHANGELOG
+++ b/modules/party_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#13332 Nettoyage des types d'identifiants de tiers inutilisés
 * BUG#14927 Gestion du cas d'une date de décès qui est égale à la date de naissance
 * OTH#0000 Amélioration graphique sur la vue liste des tiers
 * FEA#12673 Gestion de la date de décès sur une personne
