offered: Fix bug with default value on extra data (#3717)
Fix #14999

--- a/modules/offered/doc/en/CHANGELOG
+++ b/modules/offered/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14999 Fix bug when selecting default value on extra data
 * FEA#14767 Allow to see/add products from template
 * FEA#14145 Manage party extra data : Until now, the only way to add extra data on a party was to use a covered element extra data, wich was used by the projects but was not optimal. Coog now deals with party extra data and makes a difference between person and company. Furthermore Coog always stored the covered element extra data on a party, which was usefull in some cases (smoker) but not always. The behavior is now optional and deactivated by default but without changing existing implementations. Now we can add extra data on a subscriber and not only on the insured person (a company or a person) and store the configuration on the associated product
 * FEA#13356 Add multiselection extra data
