account_payment_sepa_contract: fix mandate cancellation (#3726)
Fix #15037

--- a/modules/account_payment_sepa_contract/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#15037 Fix cancellation of SEPA mandate
 * BUG#13529 Fix payment date initialization for rejection fee invoice
 
 Version 2.6 - 2019-10-11
