contract_noemie: update noemie_end_date on renewal and termination even when only product is noemie (#3731)
Fix #14979

--- a/modules/contract_noemie/doc/en/CHANGELOG
+++ b/modules/contract_noemie/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14979 Updating of noemie end date when renewing contracts and terminating contracts when only the product , and not the item descriptor has "noemisation"
 * BUG#14796 Handle when birthdate is '000000' in the flux
 * BUG#14665 Use SSN, Birth date, birth order to retrieve the coog's covered_element from 929 flux
 * BUG#12991 Extend set of supported noemie codes for Flow 929 batch
