--- a/modules/contract_noemie/doc/fr/CHANGELOG
+++ b/modules/contract_noemie/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#14979 Mise à jour de la date de fin de noémisation lors du renouvellement et de la résiliation lorsque seul le produit et non le descripteur de risque est en gestion de la noémisation
 * BUG#14796 Gestion de la date de naissance à 000000 dans le flux
 * BUG#14665 Utilisation du SSN, la date de naissance et rang de naissance afin de retrouver les éléments couverts du flux 929
 * BUG#12991 Extension des codes noémie supportés dans le batch de flux 929
